Introduced methodSecurity along with an UnauthorizedAccessHandler for better control on granting authorities on methods