@@ -4,6 +4,7 @@ import org.shasank.library.libraryapi.model.Book;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
@@ -15,8 +16,10 @@ public class BookRepository {
   private static int id = 0;
 
   public List<Book> findAll() {
-    return booksByIsbn.values().stream().map(books -> books.get(0)).collect(Collectors.toList());
+    booksByIsbn.values().forEach(books -> System.out.println(books.size()));
+    return booksByIsbn.values().stream().flatMap(Collection::stream).toList();
   }
+
   public Book addBook(Book book) {
     if (!booksByIsbn.containsKey(book.getIsbn())) {
       booksByIsbn.put(book.getIsbn(), new ArrayList<>());
@@ -26,11 +29,10 @@ public class BookRepository {
     return book;
   }
 
-  public List<Book> findByAuthorNameAndBookTitle(String authorNameSearchString, String bookTitleSearchString) {
-    return booksByIsbn.values().stream()
-        .map(books -> books.get(0))
+  public List<Book> findByAuthorNameAndBookTitle(String authorNameSearchString, String bookTitleSearchString, boolean unique) {
+    return (unique ? booksByIsbn.values().stream().map(books -> books.get(0)) : booksByIsbn.values().stream().flatMap(Collection::stream))
         .filter(book -> book.getBookTitle().toLowerCase().contains(bookTitleSearchString.toLowerCase())
-        && book.getAuthorName().toLowerCase().contains(authorNameSearchString.toLowerCase()))
+            && book.getAuthorName().toLowerCase().contains(authorNameSearchString.toLowerCase()))
         .toList();
   }
 }
